--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 </head>
 <body>
-    <h1>Pruebas Git</h1>
-    <p>Realizamos el primer commit</p>
-    <p>Segundo commit</p>
+    <h1>Hola mundo desde la rama beta</h1>
 </body>
 </html>
